--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@fortawesome/vue-fontawesome": "^3.0.3",
         "aos": "^2.3.4",
         "swiper": "^10.1.0",
+        "tw-elements": "^1.0.0-rc.1",
         "vue": "^3.3.4",
         "vue-router": "^4.2.4",
         "vue3-carousel": "^0.3.1",
