--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     },
     "devDependencies": {
         "@tsconfig/node18": "^18.2.0",
+        "@types/aos": "^3.0.4",
         "@types/node": "^18.17.0",
+        "@types/vue-router": "^2.0.0",
         "@vitejs/plugin-vue": "^4.2.3",
         "@vue/tsconfig": "^0.4.0",
         "autoprefixer": "^10.4.14",
